--- a/HTML-PC/lightbox.html
+++ b/HTML-PC/lightbox.html
@@ -10,7 +10,7 @@
     <meta name="description" content="content">
     <meta name="keywords" content="Việt Nam">
     <title>
-        Hir tuyển dụng pro
+        Light box
 
     </title>
     <link type="image/x-icon" href="http://ssl.gstatic.com/docs/doclist/images/infinite_arrow_favicon_5.ico"
@@ -26,6 +26,8 @@
     <script type="text/javascript" src="js/common.js"></script>
     <!-- build:script -->
     
+
+
 
 
     <!-- build:head2 -->
@@ -74,14 +76,31 @@
     </section>
 
     
-<section class="clearfix mb80">
+<div class="clearfix" style="margin: 100px 0">
     <div class="container">
-
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Launch demo modal
+        </button>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                ...
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+            </div>
+        </div>
     </div>
-</section>
-
-
-
+</div>
 
     <div class="overlay"></div>
     <!--Footer-->
