--- a/HTML-PC/css/fonts/iconfont/index.html
+++ b/HTML-PC/css/fonts/iconfont/index.html
@@ -66,27 +66,99 @@
 		<ul class="glyphs-list">
 			
 			<li>
-				<i class="iconfont-cancel"></i>
+				<i class="iconfont-bookmark"></i>
 				<code>\ea01</code>
+				<input type="text" value="iconfont-bookmark" />
+			</li>
+			
+			<li>
+				<i class="iconfont-briefcase"></i>
+				<code>\ea02</code>
+				<input type="text" value="iconfont-briefcase" />
+			</li>
+			
+			<li>
+				<i class="iconfont-cancel"></i>
+				<code>\ea03</code>
 				<input type="text" value="iconfont-cancel" />
 			</li>
 			
 			<li>
 				<i class="iconfont-close"></i>
-				<code>\ea02</code>
+				<code>\ea04</code>
 				<input type="text" value="iconfont-close" />
 			</li>
 			
 			<li>
+				<i class="iconfont-currency_exchange"></i>
+				<code>\ea05</code>
+				<input type="text" value="iconfont-currency_exchange" />
+			</li>
+			
+			<li>
+				<i class="iconfont-gpp_good"></i>
+				<code>\ea06</code>
+				<input type="text" value="iconfont-gpp_good" />
+			</li>
+			
+			<li>
+				<i class="iconfont-group_add"></i>
+				<code>\ea07</code>
+				<input type="text" value="iconfont-group_add" />
+			</li>
+			
+			<li>
 				<i class="iconfont-lang"></i>
-				<code>\ea03</code>
+				<code>\ea08</code>
 				<input type="text" value="iconfont-lang" />
 			</li>
 			
 			<li>
+				<i class="iconfont-loan"></i>
+				<code>\ea09</code>
+				<input type="text" value="iconfont-loan" />
+			</li>
+			
+			<li>
+				<i class="iconfont-location"></i>
+				<code>\ea0a</code>
+				<input type="text" value="iconfont-location" />
+			</li>
+			
+			<li>
+				<i class="iconfont-office"></i>
+				<code>\ea0b</code>
+				<input type="text" value="iconfont-office" />
+			</li>
+			
+			<li>
+				<i class="iconfont-paid"></i>
+				<code>\ea0c</code>
+				<input type="text" value="iconfont-paid" />
+			</li>
+			
+			<li>
+				<i class="iconfont-right"></i>
+				<code>\ea0d</code>
+				<input type="text" value="iconfont-right" />
+			</li>
+			
+			<li>
 				<i class="iconfont-search"></i>
-				<code>\ea04</code>
+				<code>\ea0e</code>
 				<input type="text" value="iconfont-search" />
+			</li>
+			
+			<li>
+				<i class="iconfont-signpost"></i>
+				<code>\ea0f</code>
+				<input type="text" value="iconfont-signpost" />
+			</li>
+			
+			<li>
+				<i class="iconfont-web"></i>
+				<code>\ea10</code>
+				<input type="text" value="iconfont-web" />
 			</li>
 			
 		</ul>
