--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
               <h2 class="index__section-heading">HTML-PC</h2>
               <li class="index__item"><a class="index__item-link" target="_blank" href="HTML-PC/home.html">home.html</a></li>
                           <li class="index__item"><a class="index__item-link" target="_blank" href="HTML-PC/lightbox.html">lightbox.html</a></li>
+                          <li class="index__item"><a class="index__item-link" target="_blank" href="HTML-PC/sign-in.html">sign-in.html</a></li>
+                          <li class="index__item"><a class="index__item-link" target="_blank" href="HTML-PC/sign-up.html">sign-up.html</a></li>
                           </ul>
             </section>
           <script>
