--- a/HTML-PC/home.html
+++ b/HTML-PC/home.html
@@ -25,13 +25,25 @@
         <div class="container">
             <div class="flex flex_row">
                 <div class="left_menu">
-                    <a class="logo-mobile" title="new-ca" href="#"><img class="logo-dark" src="images/graphics/m_logo.png" alt=""><img class="logo-white" src="images/graphics/m_logo-white.png" alt=""></a>
+                    <a class="logo-mobile" title="new-ca" href="#">
+                        <img class="logo-dark" src="images/graphics/m_logo.png" alt="">
+                        <img class="logo-white" src="images/graphics/m_logo-white.png" alt="">
+                    </a>
                     <a href="javascript:;" class="vibeji-ham item"><span></span> <span></span> <span></span></a>
                     <div class="flex flex_right">
                         <div class="main-menu">
                             <ul class="nav">
                                 <li class="logo">
-                                    <a title="new-ca" href="#"><img class="logo-dark" src="images/graphics/logo.png" alt=""><img class="logo-white" src="images/graphics/logo-white.png" alt=""></a>
+                                    <a title="new-ca" href="#">
+                                        <picture class="logo-dark">
+                                            <source media="(min-width:650px)" srcset="images/graphics/logo.png">
+                                            <img src="images/graphics/m_logo.png" alt="">
+                                        </picture>
+                                        <picture class="logo-white">
+                                            <source media="(min-width:650px)" srcset="images/graphics/logo-white.png">
+                                            <img src="images/graphics/m_logo-white.png" alt="">
+                                        </picture>
+                                    </a>
                                     <a href="javascript:;" class="vibeji-ham item open"><span></span> <span></span> <span></span></a>
                                 </li>
                                 <li class="active">
@@ -93,6 +105,7 @@
                 </div>
             </div>
             <div class="section-top-home__right fade-in-top">
+                <a class="back-home" href="javascript:;"><span>Quay lại</span></a>
                 <div class="top-ctv">
                     <div class="head">
                         <svg xmlns="http://www.w3.org/2000/svg" width="35" height="20" viewBox="0 0 35 20" fill="none">
@@ -253,6 +266,9 @@
             <span>MỚI NHẤT</span>
             <a class="name" href="#">Lorem ipsum dolor sit amet consectetur. Aliquam condimentum donec lore...</a>
         </div>
+    </div>
+    <div class="bg-btn">
+        <a class="btn-top-ctv" href="javascript:;">Top Cộng tác viên</a>
     </div>
 </section>
 
@@ -908,7 +924,10 @@
                 </div>
             </div>
             <div class="col-md-5 fade-in-right">
-                <img src="images/graphics/recland.svg" alt="">
+                <picture>
+                    <source media="(min-width:767px)" srcset="images/graphics/recland.svg">
+                    <img src="images/graphics/m_recland.svg" alt="">
+                </picture>
             </div>
         </div>
     </div>
@@ -922,31 +941,37 @@
                     <span class="icon">
                         <img src="images/icons/icon-briefcase.png" alt="">
                     </span>
-                    <div class="number">
-                        <strong class="numscroller" data-min='1' data-max='22260' data-delay='1.5'
-                        data-increment='20'></strong>
+                    <div class="content">
+                        <div class="number">
+                            <strong class="numscroller" data-min='1' data-max='22260' data-delay='1.5'
+                            data-increment='20'></strong>
+                        </div>
+                        <div>Việc làm tại HRI Recland</div>
                     </div>
-                    <div>Việc làm tại HRI Recland</div>
                 </div>
                 <div class="item">
                     <span class="icon">
                         <img src="images/icons/icon-office.png" alt="">
                     </span>
-                    <div class="number">
-                        <strong class="numscroller" data-min='1' data-max='1543' data-delay='1.5'
-                        data-increment='10'></strong>
+                    <div class="content">
+                        <div class="number">
+                            <strong class="numscroller" data-min='1' data-max='1543' data-delay='1.5'
+                            data-increment='10'></strong>
+                        </div>
+                        <div>Nhà tuyển dụng</div>
                     </div>
-                    <div>Nhà tuyển dụng</div>
                 </div>
                 <div class="item">
                     <span class="icon">
                         <img src="images/icons/icon-loan.png" alt="">
                     </span>
-                    <div class="number">
-                        <strong class="numscroller" data-min='1' data-max='22260' data-delay='1.5'
-                        data-increment='20'></strong>
+                    <div class="content">
+                        <div class="number">
+                            <strong class="numscroller" data-min='1' data-max='22260' data-delay='1.5'
+                            data-increment='20'></strong>
+                        </div>
+                        <div>CTV đã nhận thưởng</div>
                     </div>
-                    <div>CTV đã nhận thưởng</div>
                 </div>
             </div>
         </div>
@@ -1098,10 +1123,6 @@
         </div>
     </footer>
     <!--End Footer-->
-    <!--Back to top-->
-    <a href="javascript:;" id="to_top">
-        <i class="fa fa-long-arrow-up"></i>
-    </a>
     <div class="overlay"></div>
     <!--Jquery lib-->
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
