--- a/HTML-PC/lightbox.html
+++ b/HTML-PC/lightbox.html
@@ -25,13 +25,25 @@
         <div class="container">
             <div class="flex flex_row">
                 <div class="left_menu">
-                    <a class="logo-mobile" title="new-ca" href="#"><img class="logo-dark" src="images/graphics/m_logo.png" alt=""><img class="logo-white" src="images/graphics/m_logo-white.png" alt=""></a>
+                    <a class="logo-mobile" title="new-ca" href="#">
+                        <img class="logo-dark" src="images/graphics/m_logo.png" alt="">
+                        <img class="logo-white" src="images/graphics/m_logo-white.png" alt="">
+                    </a>
                     <a href="javascript:;" class="vibeji-ham item"><span></span> <span></span> <span></span></a>
                     <div class="flex flex_right">
                         <div class="main-menu">
                             <ul class="nav">
                                 <li class="logo">
-                                    <a title="new-ca" href="#"><img class="logo-dark" src="images/graphics/logo.png" alt=""><img class="logo-white" src="images/graphics/logo-white.png" alt=""></a>
+                                    <a title="new-ca" href="#">
+                                        <picture class="logo-dark">
+                                            <source media="(min-width:650px)" srcset="images/graphics/logo.png">
+                                            <img src="images/graphics/m_logo.png" alt="">
+                                        </picture>
+                                        <picture class="logo-white">
+                                            <source media="(min-width:650px)" srcset="images/graphics/logo-white.png">
+                                            <img src="images/graphics/m_logo-white.png" alt="">
+                                        </picture>
+                                    </a>
                                     <a href="javascript:;" class="vibeji-ham item open"><span></span> <span></span> <span></span></a>
                                 </li>
                                 <li class="active">
@@ -138,10 +150,6 @@
         </div>
     </footer>
     <!--End Footer-->
-    <!--Back to top-->
-    <a href="javascript:;" id="to_top">
-        <i class="fa fa-long-arrow-up"></i>
-    </a>
     <div class="overlay"></div>
     <!--Jquery lib-->
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
