--- a/HTML-PC/sign-in.html
+++ b/HTML-PC/sign-in.html
@@ -87,7 +87,7 @@
 <section class="section-top-sign clearfix mb80">
     <div class="container-right">
         <div class="row">
-            <div class="col-md-4 mb-4 pe-8 pt-8">
+            <div class="col-lg-4 col-md-5 mb-4 pe-8 pt-8">
                 <!-- ĐĂNG NHẬP -->
                 <div class="form-default">
                     <h3 class="title-form">Chào mừng bạn đến với Recland.co </h3>
@@ -161,7 +161,7 @@
 
                 </div>
             </div>
-            <div class="col-md-8 mb-4">
+            <div class="col-lg-8 col-md-7 d-none d-md-block mb-4">
                 <div class="slide-banner">
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
@@ -357,7 +357,7 @@
 <section class="section-home-4 clearfix mb80">
     <div class="container">
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-7 mb-4">
                 <h2 class="title-cate2 mb-5">Hãy chọn <a href="#" style="color: #F79720;">Recland</a> cùng bạn gia tăng thu nhập</h2>
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="hr" role="tabpanel" aria-labelledby="hr-tab">
@@ -424,7 +424,7 @@
             <div class="col-md-5">
                 <picture>
                     <source media="(min-width:767px)" srcset="images/graphics/recland.svg">
-                    <img src="images/graphics/m_recland.svg" alt="">
+                    <img width="100%" src="images/graphics/m_recland.svg" alt="">
                 </picture>
             </div>
         </div>
