--- a/HTML-PC/sign-up.html
+++ b/HTML-PC/sign-up.html
@@ -30,7 +30,11 @@
                         <img class="logo-dark" src="images/graphics/m_logo.png" alt="">
                         <img class="logo-white" src="images/graphics/m_logo-white.png" alt="">
                     </a>
-                    <a href="javascript:;" class="vibeji-ham item"><span></span> <span></span> <span></span></a>
+                    <a href="javascript:;" class="vibeji-ham">
+                        <svg class="icon-svg">
+                            <use xlink:href="images/icons/icon.svg#menu"></use>
+                        </svg>
+                    </a>
                     <div class="flex flex_right">
                         <div class="main-menu">
                             <ul class="nav">
@@ -45,7 +49,11 @@
                                             <img src="images/graphics/m_logo-white.png" alt="">
                                         </picture>
                                     </a>
-                                    <a href="javascript:;" class="vibeji-ham item open"><span></span> <span></span> <span></span></a>
+                                    <a href="javascript:;" class="close-menu item">
+                                        <svg class="icon-svg">
+                                            <use xlink:href="images/icons/icon.svg#close"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="active">
                                     <a class="link" href="#">Tìm việc</a>
@@ -438,8 +446,8 @@
             </div>
             <div class="col-md-5">
                 <picture>
-                    <source media="(min-width:767px)" srcset="images/graphics/recland.svg">
-                    <img width="100%" src="images/graphics/m_recland.svg" alt="">
+                    <source media="(min-width:767px)" srcset="images/graphics/recland.png">
+                    <img width="100%" src="images/graphics/m_recland.png" alt="">
                 </picture>
             </div>
         </div>
