--- a/HTML-PC/nha-tuyen-dung.html
+++ b/HTML-PC/nha-tuyen-dung.html
@@ -30,7 +30,11 @@
                         <img class="logo-dark" src="images/graphics/m_logo.png" alt="">
                         <img class="logo-white" src="images/graphics/m_logo-white.png" alt="">
                     </a>
-                    <a href="javascript:;" class="vibeji-ham item"><span></span> <span></span> <span></span></a>
+                    <a href="javascript:;" class="vibeji-ham">
+                        <svg class="icon-svg">
+                            <use xlink:href="images/icons/icon.svg#menu"></use>
+                        </svg>
+                    </a>
                     <div class="flex flex_right">
                         <div class="main-menu">
                             <ul class="nav">
@@ -45,7 +49,11 @@
                                             <img src="images/graphics/m_logo-white.png" alt="">
                                         </picture>
                                     </a>
-                                    <a href="javascript:;" class="vibeji-ham item open"><span></span> <span></span> <span></span></a>
+                                    <a href="javascript:;" class="close-menu item">
+                                        <svg class="icon-svg">
+                                            <use xlink:href="images/icons/icon.svg#close"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="active">
                                     <a class="link" href="#">Tìm việc</a>
@@ -212,8 +220,8 @@
             </div>
             <div class="quy-trinh mb80">
                 <picture>
-                    <source media="(min-width:650px)" srcset="images/graphics/quytrinh-tuyendung.svg">
-                    <img src="images/graphics/quytrinh-tuyendung.svg" alt="">
+                    <source media="(min-width:650px)" srcset="images/graphics/quytrinh-tuyendung.png">
+                    <img src="images/graphics/quytrinh-tuyendung.png" alt="">
                 </picture>
             </div>
         </div>
@@ -390,8 +398,8 @@
     <div class="quytrinh-hoptac clearfix mb150">
         <h2 class="mb60 center title-cate2">Quy trình hợp tác</h2>
         <picture>
-            <source media="(min-width:650px)" srcset="images/graphics/quytrinh-hoptac.svg">
-            <img src="images/graphics/quytrinh-hoptac.svg" alt="">
+            <source media="(min-width:650px)" srcset="images/graphics/quytrinh-hoptac.png">
+            <img src="images/graphics/quytrinh-hoptac.png" alt="">
         </picture>
     </div>
     <div class="box-tangtoc-td clearfix">
