--- a/HTML-PC/nha-tuyen-dung.html
+++ b/HTML-PC/nha-tuyen-dung.html
@@ -396,11 +396,13 @@
         </div>
     </div>
     <div class="quytrinh-hoptac clearfix mb150">
-        <h2 class="mb60 center title-cate2">Quy trình hợp tác</h2>
-        <picture>
-            <source media="(min-width:650px)" srcset="images/graphics/quytrinh-hoptac.png">
-            <img src="images/graphics/quytrinh-hoptac.png" alt="">
-        </picture>
+        <div class="container">
+            <h2 class="mb60 center title-cate2">Quy trình hợp tác</h2>
+            <picture>
+                <source media="(min-width:650px)" srcset="images/graphics/quytrinh-hoptac.png">
+                <img src="images/graphics/quytrinh-hoptac.png" alt="">
+            </picture>
+        </div>
     </div>
     <div class="box-tangtoc-td clearfix">
         <div class="container">
@@ -413,7 +415,7 @@
                         <div class="form-group mb-3">
                             <div class="input-icon">
                                 <svg class="icon-svg">
-                                    <use xlink:href="images/icons/icon.svg#v"></use>
+                                    <use xlink:href="images/icons/icon.svg#business"></use>
                                 </svg>
                                 <input type="text" class="form-control" placeholder="Tên công ty">
                             </div>
