--- a/HTML-PC/company.html
+++ b/HTML-PC/company.html
@@ -132,24 +132,26 @@
                 </div>
             </div>
         </form>
-        <div class="select-address d-none d-lg-block">
-            <select class="select2" name="" style="width: 100%;">
-                <option value="">Toàn quốc</option>
-                <option value="">Thành phố Hà Nội</option>
-                <option value="">Thành phố HCM</option>
-                <option value="">Đà Nẵng</option>
-            </select>
-        </div>
-        <div class="select-address d-none d-lg-block">
-            <select class="select2" name="" style="width: 100%;">
-                <option value="">Lĩnh vực</option>
-                <option value="">Thành phố Hà Nội</option>
-                <option value="">Thành phố HCM</option>
-                <option value="">Đà Nẵng</option>
-            </select>
+        <div class="fillter-select">
+            <div class="select-address">
+                <select class="select2" name="" style="width: 100%;">
+                    <option value="">Toàn quốc</option>
+                    <option value="">Thành phố Hà Nội</option>
+                    <option value="">Thành phố HCM</option>
+                    <option value="">Đà Nẵng</option>
+                </select>
+            </div>
+            <div class="select-address">
+                <select class="select2" name="" style="width: 100%;">
+                    <option value="">Lĩnh vực</option>
+                    <option value="">Thành phố Hà Nội</option>
+                    <option value="">Thành phố HCM</option>
+                    <option value="">Đà Nẵng</option>
+                </select>
+            </div>
         </div>
         <a class="btn-default btn-search">Tìm kiếm</a>
-        <a class="btn-fillter d-block d-lg-none off">
+        <a class="btn-fillter d-block d-lg-none">
             <svg class="icon-svg big svg-on">
                 <use xlink:href="images/icons/icon.svg#filter_alt"></use>
             </svg>
