--- a/HTML-PC/lien-he.html
+++ b/HTML-PC/lien-he.html
@@ -93,35 +93,35 @@
 
     
 
-<section class="container clearfix mt60 mb80">
+<section class="container page-lienhe clearfix mt60 mb80">
     <div class="row">
-        <div class="col-md-6">
-            <h1 class="logo mb40">
+        <div class="col-md-6 mb60">
+            <h1 class="logo d-none d-md-block mb40">
                 <img src="images/graphics/logo.png" alt="">
             </h1>
             <h2 class="title-cate3 mb4">Nền tảng tuyển dụng thương mại điện tử hàng đầu Việt Nam</h2>
-            <div class="flexbox align-center txt_20 mb-3">
+            <div class="icon-text-">
                 <svg class="icon-svg big me-2">
                     <use xlink:href="images/icons/icon.svg#location"></use>
                 </svg>
                 <span class="color_222 me-2">Hà Nội:</span>
                 <span class="color-gray">Tòa AC, Số 3, Ngõ 78 Duy Tân, Hà Nội</span>
             </div>
-            <div class="flexbox align-center txt_20 mb-3">
+            <div class="icon-text-">
                 <svg class="icon-svg big me-2">
                     <use xlink:href="images/icons/icon.svg#phone"></use>
                 </svg>
                 <span class="color_222 me-2">Điện thoại:</span>
                 <span class="color-gray">0987090336</span>
             </div>
-            <div class="flexbox align-center txt_20 mb-3">
+            <div class="icon-text-">
                 <svg class="icon-svg big me-2">
                     <use xlink:href="images/icons/icon.svg#Message"></use>
                 </svg>
                 <span class="color_222 me-2">Mail:</span>
                 <span class="color-gray">recland@recland.com.vn</span>
             </div>
-            <div class="flexbox align-center txt_20 mb-3">
+            <div class="icon-text-">
                 <svg class="icon-svg big me-2">
                     <use xlink:href="images/icons/icon.svg#web"></use>
                 </svg>
@@ -134,7 +134,7 @@
                 <a href=""><img src="images/icons/icon-in.png" alt=""></a>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mb60">
             <div class="title-cate color_222 mb0">Liên hệ với chúng tôi</div>
             <p class="color-gray">Lorem ipsum dolor sit amet consectetur. Vel facilisi ullamcorper proin vulputate at.</p>
             <div class="form-default">
