--- a/HTML-PC/nha-tuyen-dung-dangky.html
+++ b/HTML-PC/nha-tuyen-dung-dangky.html
@@ -95,80 +95,87 @@
 <section class="section-employer clearfix">
     <div class="container">
         <div class="row align-center">
-            <div class="col-md-7">
+            <div class="col-lg-7 fade-out">
                 <h1 class="title-cate2"><span class="color-orange">Tối ưu 50%</span> chi phí tuyển dụng cùng Recland</h1>
                 <p>Rất nhiều CV ứng viên đang chờ ứng tuyển vào công ty của bạn</p>
+                <div class="d-block d-lg-none">
+                    <a class="btn-default min me-2 btn-login-employer">Đăng nhập</a>
+                    <a class="btn-default none min btn-resign-employer">Đăng ký</a>
+                </div>
             </div>
-            <div class="col-md-5">
-                <form class="form-default">
-                    <h2 class="title-form">Chào mừng bạn đến với Recland.co </h2>
-                    <div class="form-group mb-3">
-                        <div class="input-icon">
-                            <svg class="icon-svg">
-                                <use xlink:href="images/icons/icon.svg#user"></use>
-                            </svg>
-                            <input type="text" class="form-control" placeholder="Họ và Tên*">
+            <div class="col-lg-5 employer-form">
+                <a class="back-home d-block d-md-none" href="javascript:;"><span>Quay lại</span></a>
+                <div class="scroll-height">
+                    <form class="form-default">
+                        <h2 class="title-form">Chào mừng bạn đến với Recland.co </h2>
+                        <div class="form-group mb-3">
+                            <div class="input-icon">
+                                <svg class="icon-svg">
+                                    <use xlink:href="images/icons/icon.svg#user"></use>
+                                </svg>
+                                <input type="text" class="form-control" placeholder="Họ và Tên*">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group mb-3">
-                        <div class="input-icon">
-                            <svg class="icon-svg">
-                                <use xlink:href="images/icons/icon.svg#Message"></use>
-                            </svg>
-                            <input type="text" class="form-control" placeholder="Email*">
+                        <div class="form-group mb-3">
+                            <div class="input-icon">
+                                <svg class="icon-svg">
+                                    <use xlink:href="images/icons/icon.svg#Message"></use>
+                                </svg>
+                                <input type="text" class="form-control" placeholder="Email*">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group mb-3">
-                        <div class="input-icon">
-                            <svg class="icon-svg">
-                                <use xlink:href="images/icons/icon.svg#phone"></use>
-                            </svg>
-                            <input type="text" class="form-control" placeholder="Số điện thoại*">
+                        <div class="form-group mb-3">
+                            <div class="input-icon">
+                                <svg class="icon-svg">
+                                    <use xlink:href="images/icons/icon.svg#phone"></use>
+                                </svg>
+                                <input type="text" class="form-control" placeholder="Số điện thoại*">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group mb-3">
-                        <div class="relative password-wrap input-icon">
-                            <svg class="icon-svg">
-                                <use xlink:href="images/icons/icon.svg#Lock"></use>
-                            </svg>
-                            <input id="password-field" type="password" name="password" class="form-control" placeholder="Mật khẩu*">
-                            <span toggle="#password-field" class="toggle-password"></span>
+                        <div class="form-group mb-3">
+                            <div class="relative password-wrap input-icon">
+                                <svg class="icon-svg">
+                                    <use xlink:href="images/icons/icon.svg#Lock"></use>
+                                </svg>
+                                <input id="password-field" type="password" name="password" class="form-control" placeholder="Mật khẩu*">
+                                <span toggle="#password-field" class="toggle-password"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group mb-3">
-                        <div class="relative password-wrap input-icon">
-                            <svg class="icon-svg">
-                                <use xlink:href="images/icons/icon.svg#Lock"></use>
-                            </svg>
-                            <input id="password-field" type="password" name="password" class="form-control" placeholder="Xác nhận mật khẩu*">
-                            <span toggle="#password-field" class="toggle-password"></span>
+                        <div class="form-group mb-3">
+                            <div class="relative password-wrap input-icon">
+                                <svg class="icon-svg">
+                                    <use xlink:href="images/icons/icon.svg#Lock"></use>
+                                </svg>
+                                <input id="password-field" type="password" name="password" class="form-control" placeholder="Xác nhận mật khẩu*">
+                                <span toggle="#password-field" class="toggle-password"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group mb-3">
-                        <div class="input-icon">
-                            <svg class="icon-svg">
-                                <use xlink:href="images/icons/icon.svg#code"></use>
-                            </svg>
-                            <input type="text" class="form-control" placeholder="Referral code*">
+                        <div class="form-group mb-3">
+                            <div class="input-icon">
+                                <svg class="icon-svg">
+                                    <use xlink:href="images/icons/icon.svg#code"></use>
+                                </svg>
+                                <input type="text" class="form-control" placeholder="Referral code*">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group mb-3 flex space-between">
-                        <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Chấp nhận <a href="#" style="color :#19C9E8">điều khoản sử dụng</a> nếu tích</label>
+                        <div class="form-group mb-3 flex space-between">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Chấp nhận <a href="#" style="color :#19C9E8">điều khoản sử dụng</a> nếu tích</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group mb-3"><a class="btn-default full">Đăng ký</a></div>
-                    <div class="form-group mb-3 center">
-                        Bạn đã có tài khoản? <a href="#" style="color :#19C9E8">Đăng nhập ngay</a>
-                    </div>
-                    <div class="line-bottom mb-4"></div>
-                    <div>
-                        <a href="#">Thỏa thuận sử dụng</a>
-                        <span class="ms-1 me-1">|</span>
-                        <a href="#">Quy định bảo mật</a>
-                    </div>
-                </form>
+                        <div class="form-group mb-3"><a class="btn-default full">Đăng ký</a></div>
+                        <div class="form-group mb-3 center">
+                            Bạn đã có tài khoản? <a href="#" style="color :#19C9E8">Đăng nhập ngay</a>
+                        </div>
+                        <div class="line-bottom mb-4"></div>
+                        <div>
+                            <a href="#">Thỏa thuận sử dụng</a>
+                            <span class="ms-1 me-1">|</span>
+                            <a href="#">Quy định bảo mật</a>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
