--- a/HTML-PC/home.html
+++ b/HTML-PC/home.html
@@ -1080,7 +1080,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <a class="logo" title="new-ca" href="#"><img src="images/graphics/logo.png" alt=""></a>
+                    <a class="logo" title="new-ca" href="#">
+                        <img src="images/graphics/logo.png" alt="">
+                        <img class="logo-white" src="images/graphics/logo-white.png" alt="">
+                    </a>
                     <div class="mb40">Mang việc làm và ưu đãi hấp dẫn đến cho Recer và Ứng viên</div>
                     <div class="social flex">
                         <a href=""><img src="images/icons/icon-face.png" alt=""></a>
