--- a/HTML-PC/nha-tuyen-dung-dangky.html
+++ b/HTML-PC/nha-tuyen-dung-dangky.html
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="col-lg-5 employer-form">
-                <a class="back-home d-block d-md-none" href="javascript:;"><span>Quay lại</span></a>
+                <a class="back-home d-block d-lg-none" href="javascript:;"><span>Quay lại</span></a>
                 <div class="scroll-height">
                     <form class="form-default">
                         <h2 class="title-form">Chào mừng bạn đến với Recland.co </h2>
@@ -183,13 +183,52 @@
 <section class="page-employer clearfix">
     <div class="giaiphap-employer clearfix mb150">
         <div class="container">
-            <h2 class="title-cate2 center">
+            <h2 class="title-cate2 mb40 center">
                 Giải pháp tuyển dụng </br>tối ưu cho doanh nghiệp
             </h2>
-            <picture>
-                <source media="(min-width:650px)" srcset="images/graphics/giaiphap.svg">
-                <img src="images/graphics/giaiphap.svg" alt="">
-            </picture>
+            <div class="img">
+                <picture>
+                    <source media="(min-width:992px)" srcset="images/graphics/giaiphap.svg">
+                    <img src="images/graphics/m_giaiphap.png" alt="">
+                </picture>
+            </div>
+            <div class="section-mobile d-block d-lg-none">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="content">
+                                <h3>Tuyển dụng thần tốc</h3>
+                                <p>Kết nối trực tiếp với 3000+ headhunter</p>
+                                <p>Quy trình tuyển dụng nhanh gọn, linh hoạt</p>
+                                <p>200+ Ứng viên mới mỗi ngày</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content">
+                                <h3>Đa dạng ngành nghề</h3>
+                                <p>Cung cấp việc làm và ứng viên mọi ngành nghề</p>
+                                <p>Công nghệ thông tin, Sale, Marketing...</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content">
+                                <h3>Tối ưu 50% chi phí tuyển dụng</h3>
+                                <p>3 hình thức tuyển dụng phù hợp mọi ngân sách</p>
+                                <p>Chủ động tìm kiếm ứng viên với kho ứng viên tới hàng trăm ngàn data</p>
+                                <p>Cam kết số lượng và chất lượng ứng viên</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content">
+                                <h3>Giải pháp số #1 tuyển dụng trực truyến</h3>
+                                <p>Công nghệ tuyển dụng và theo dõi hiệu quả tuyển dụng trực tuyến</p>
+                                <p>Thu hút và giữ chân nhân tài hiệu quả</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
         </div>
     </div>
     <div class="dichvu-employer clearfix mb80">
@@ -258,8 +297,8 @@
             </div>
             <div class="quy-trinh mb80">
                 <picture>
-                    <source media="(min-width:650px)" srcset="images/graphics/quytrinh-tuyendung.png">
-                    <img src="images/graphics/quytrinh-tuyendung.png" alt="">
+                    <source media="(min-width:992px)" srcset="images/graphics/quytrinh-tuyendung.png">
+                    <img src="images/graphics/m_quytrinh-tuyendung.png" alt="">
                 </picture>
             </div>
         </div>
@@ -435,16 +474,17 @@
     <div class="quytrinh-hoptac clearfix mb150">
         <div class="container">
             <h2 class="mb60 center title-cate2">Quy trình hợp tác</h2>
-            <picture>
-                <source media="(min-width:650px)" srcset="images/graphics/quytrinh-hoptac.png">
-                <img src="images/graphics/quytrinh-hoptac.png" alt="">
-            </picture>
+            <img class="d-none d-sm-block" src="images/graphics/quytrinh-hoptac.png" alt="">
+            <div class="d-block d-sm-none">
+                <div><img src="images/graphics/employer-user.png" alt=""></div>
+                <div><img src="images/graphics/m_quytrinh-hoptac.png" alt=""></div>
+            </div>
         </div>
     </div>
     <div class="box-tangtoc-td clearfix">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-lg-5 col-md-6 mb50">
                     <form class="form-default">
                         <h2 class="title-cate">
                             <span>Đăng ký tư vấn</span>
@@ -504,7 +544,7 @@
                         <div class="form-group mb-3"><a class="btn-default full">Đăng ký tư vấn</a></div>
                     </form>
                 </div>
-                <div class="col-md-7 ps-6">
+                <div class="col-lg-7 col-md-6 ps-6 mb50">
                     <h2 class="title-cate3">Sẵn sàng tăng tốc tuyển dụng </br>cùng Recland</h2>
                 </div>
             </div>
@@ -522,7 +562,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <a class="logo" title="new-ca" href="#"><img src="images/graphics/logo.png" alt=""></a>
+                    <a class="logo" title="new-ca" href="#">
+                        <img src="images/graphics/logo.png" alt="">
+                        <img class="logo-white" src="images/graphics/logo-white.png" alt="">
+                    </a>
                     <div class="mb40">Mang việc làm và ưu đãi hấp dẫn đến cho Recer và Ứng viên</div>
                     <div class="social flex">
                         <a href=""><img src="images/icons/icon-face.png" alt=""></a>
@@ -570,6 +613,7 @@
     
 <script>
     $('.topnav').addClass('home');
+    $('.footer').addClass('employer');
 </script>
 
 
